- Fixed "A Blissful Day" and "Outside the Cave" not being researchable.

See the Clicker Class wiki for full details!