@@ -1,3 +1,4 @@
+- Updated Smite torch flame types.
 - Fixed "A Blissful Day" and "Outside the Cave" not being researchable.
 
 See the Clicker Class wiki for full details!
